@@ -4,6 +4,10 @@ Products.CMFCore Changelog
 2.3.0-alpha (unreleased)
 ------------------------
 
+- Changed GenericSetup import handlers to fail silently if they
+  are called in a context that does not contain the items they 
+  import.
+
 - Added zope.app.testing as a testing dependency.
 
 - Import BeforeTraverseEvent from new location if available.
